# msecret-obsolete

./: .default-version  .gitattributes  .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  base32.c  base58.c  base58.h  configure  configure.ac  ecollect.c  lkdf.c  lkdf.h  main.c  msecret.c  msecret.h  protocol.md
doc/: LKDF.md  Makefile.am  Makefile.in  old-notes.md
etc/: Dockerfile  build-in-docker.sh  msecret.rb  run-in-docker.sh
hmac_sha/: hmac.c  hmac_sha1.c  hmac_sha256.c  hmac_sha256.h  sha1.c  sha2prog.c  sha2speed.c  sha2test.pl
hmac_sha/testvectors/: vector001.info  vector003.info  vector005.info  vector008.info  vector010.info  vector011.info  vector013.info  vector014.info  vector015.info  vector017.info  vector018.info
src/: Makefile.am  Makefile.in  config.h.in
src/ecollect/: Makefile.am  Makefile.in  ecollect.c
src/libmsecret/: Makefile.am  Makefile.in  libmsecret.pc.in  lkdf.c  lkdf.h  msecret.c  msecret.h
src/msecret/: Makefile.am  Makefile.in  main.c
src/util/: help.h
